#9 :: install parcel and reac dependency

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "parcel index.html --open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/react-dom": "^18.0.0",
+    "parcel-bundler": "^1.12.5"
+  }
 }
