--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,1 +1,4 @@
-{ "extends": "../.eslintrc.json", "env": { "browser": true } }
+{
+  "extends": "../.eslintrc.json",
+  "env": { "browser": true }
+}
