--- a/.github/workflows/node-frontend-lint.js.yml
+++ b/.github/workflows/node-frontend-lint.js.yml
@@ -28,5 +28,7 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: cd frontend
+    - run: pwd
+    - run: ls
     - run: npm ci
     - run: npm run lint
