--- a/.github/workflows/node-frontend-lint.js.yml
+++ b/.github/workflows/node-frontend-lint.js.yml
@@ -26,10 +26,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: cd v39-bears-team-12
     - run: npm ci
-    - run: cd frontend
-    - run: pwd
-    - run: ls
+    - run: cd /frontend
     - run: npm ci
     - run: npm run lint
