--- a/.github/workflows/node-frontend-lint.js.yml
+++ b/.github/workflows/node-frontend-lint.js.yml
@@ -22,11 +22,13 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
+    - uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
-    - run: cd ./frontend
-    - run: npm ci
-    - run: npm run lint
+    - name: install frontend deps
+      working-directory: ./frontend
+      run: npm ci
+    - name: run frontend lint
+      run: npm run lint
