--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
   "parser": "@typescript-eslint/parser",
   "extends": ["plugin:@typescript-eslint/recommended", "plugin:prettier/recommended"],
   "rules": {
+    "@typescript-eslint/no-unused-vars": 2,
     "for-direction": 2,
     "getter-return": 2,
     "no-async-promise-executor": 2,
@@ -52,7 +53,6 @@
     "no-unsafe-negation": 2,
     "no-unsafe-optional-chaining": 2,
     "no-unused-labels": 2,
-    "no-unused-vars": 2,
     "no-useless-backreference": 2,
     "no-useless-catch": 2,
     "no-useless-escape": 2,
