--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,10 @@
   "license": "ISC",
   "devDependencies": {
     "@types/react-dom": "^18.0.0",
-    "parcel-bundler": "^1.12.5"
+    "autoprefixer": "^10.4.4",
+    "parcel": "^2.4.1",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.23"
   },
   "dependencies": {
     "react": "^18.0.0",
