Basic user route

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "npm run lint && tsc && node dist/index.js",
+    "dev": "tsc && node dist/index.js",
     "lint": "eslint src/**",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
