--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "server": "npm run server --workspace=backend",
     "client": "npm start --workspace=frontend",
-    "dev": "npm run server & npm run client",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/chingu-voyages/v39-bears-team-12#readme",
   "dependencies": {
+    "concurrently": "^7.1.0",
     "eslint": "^8.13.0",
     "prettier": "^2.6.2",
     "typescript": "4.5"
