--- a/.github/workflows/node-frontend-lint.js.yml
+++ b/.github/workflows/node-frontend-lint.js.yml
@@ -30,6 +30,8 @@ jobs:
     - name: install frontend deps
       working-directory: ./frontend
       run: npm ci
+    - name: which directory
+      run: echo pwd
     - name: run frontend lint
       working-directory: ./frontend
       run: npm run lint
