--- a/.github/workflows/node-frontend-lint.js.yml
+++ b/.github/workflows/node-frontend-lint.js.yml
@@ -30,8 +30,8 @@ jobs:
     - name: install frontend deps
       working-directory: ./frontend
       run: npm ci
-    - name: which directory
-      run: pwd
+    - name: lint version
+      run: npm lint -v
     - name: run frontend lint
       working-directory: ./frontend
       run: npm run lint
