--- a/.github/workflows/node-frontend-lint.js.yml
+++ b/.github/workflows/node-frontend-lint.js.yml
@@ -26,7 +26,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
+    - name: install root deps
+      run: npm ci
     - name: install frontend deps
       working-directory: ./frontend
       run: npm ci
