--- a/.github/workflows/node-frontend-lint.js.yml
+++ b/.github/workflows/node-frontend-lint.js.yml
@@ -30,7 +30,7 @@ jobs:
       run: npm ci
     - name: install frontend deps
       working-directory: ./frontend
-      run: npm ci
+      run: npm ci & npm install -D eslint
     - name: run frontend lint
       working-directory: ./frontend
       run: npm run lint
