--- a/.github/workflows/node-frontend-lint.js.yml
+++ b/.github/workflows/node-frontend-lint.js.yml
@@ -5,13 +5,12 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ development ]
+    branches: [development]
   pull_request:
-    branches: [ development ]
+    branches: [development]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -20,17 +19,13 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - name: install root deps
-      run: npm ci
-    - name: install frontend deps
-      working-directory: ./frontend
-      run: npm ci & npm install -D eslint
-    - name: run frontend lint
-      working-directory: ./frontend
-      run: npm run lint
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+      - name: install root deps
+        run: npm ci
+      - name: run frontend lint
+        run: npm run lint:client
