--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "jsx": "react",
-    "target": "esnext"
+    "target": "esnext",
+    "typeRoots": ["types", "./node_modules/@types"]
   },
   "extends": "../tsconfig.json"
 }
