--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.3"
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "mongoose": "^6.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "nodemon": "^2.0.16",
     "ts-node": "^10.7.0"
   }
 }
