--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "concurrently": "^7.1.0",
     "eslint": "^8.13.0",
     "prettier": "^2.6.2",
-    "typescript": "4.5"
+    "typescript": "4.5",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "eslint-config-prettier": "^8.5.0",
