--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,12 @@
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "mongoose": "^6.3.2"
+    "mongoose": "^6.3.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/uuid": "^8.3.4",
     "nodemon": "^2.0.16",
     "ts-node": "^10.7.0"
   }
