--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon --watch './**/*.ts' --exec npx ts-node src/index.ts",
+    "server": "nodemon -e ts --exec npx ts-node src/index.ts",
     "lint": "eslint src/**",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
