--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,18 +3,20 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "parcel src/index.html --open",
-    "build": "parcel build src/index.html",
+    "start": "NODE_ENV=development parcel src/index.html --open",
+    "build": "rm -rf ./dist & parcel build src/index.html",
     "lint": "eslint src/**/*",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^17.0.33",
     "@types/react-dom": "^18.0.0",
     "autoprefixer": "^10.4.4",
     "parcel": "^2.5.0",
     "postcss": "^8.4.12",
+    "process": "^0.11.10",
     "tailwindcss": "^3.0.23"
   },
   "dependencies": {
