--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "jsx": "react",
     "target": "esnext",
-    "typeRoots": ["types", "./node_modules/@types"]
+    "typeRoots": ["types", "./node_modules/@types"],
+    "composite": true
   },
   "extends": "../tsconfig.json"
 }
