--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "preserveConstEnums": true,
     "sourceMap": false,
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "target": "es6"
   }
 }
