--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "NODE_ENV=development parcel src/index.html --open",
+    "dev": "NODE_ENV=development parcel src/index.html --open",
     "build": "rm -rf ./dist & parcel build src/index.html",
     "lint": "eslint src/**/*",
     "test": "echo \"Error: no test specified\" && exit 1"
